samples/_failures_safe/1761217006_10909c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ffe537a.c: In function ‘main’:
./samples/SAFE/__tmp_8ffe537a.c:172:9: error: expected expression at end of input
  172 |         if (token.type != TOKEN_EOF && token.type !=
      |         ^~
./samples/SAFE/__tmp_8ffe537a.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ffe537a.c:172:9: error: expected declaration or statement at end of input
